Implemented Ad Viewing Page
Users can now view/ report ads and navigate between the ad list and ad
viewing.  Ad viewing also pull aditional information from IMDB.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -21,12 +21,78 @@
         
         <!-- Login and sign up -->
    		<ul class="nav navbar-nav navbar-right" style="margin-right:0px">
-     			<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-     			<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+     			<li><a data-toggle="modal" data-target="#signUpModal"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
+     			<li><a data-toggle="modal" data-target="#signInModal"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
      	</ul>
 	</nav>
 	
 	<div ng-view class="pageContainer"></div>
+
+
+	<!-- Sign in modal -->
+	<div class="modal fade" id="signInModal" role="dialog">
+		<div class="modal-dialog">
+	  		<!-- Modal content-->
+	    	<div class="modal-content">
+	    		<div class="modal-header">
+	        		<button type="button" class="close" data-dismiss="modal">&times;</button>
+	         		<h4 class="modal-title">Sign In</h4>
+	       		</div>
+	       		<div class="modal-body">
+	         		<div class="form-group">
+  						<label for="usr">Name:</label>
+  						<input type="text" class="form-control" id="usr">
+					</div>
+					<div class="form-group">
+  						<label for="pwd">Password:</label>
+  						<input type="password" class="form-control" id="pwd">
+					</div>
+	       		</div>
+	       		<div class="modal-footer">
+	        		<button type="button" class="btn btn-default" data-dismiss="modal">Sign In</button>
+	        		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	       		</div>
+	       	</div>
+		</div>
+	</div>
 	
+	<!-- Sign up modal -->
+	<div class="modal fade" id="signUpModal" role="dialog">
+		<div class="modal-dialog">
+	  		<!-- Modal content-->
+	    	<div class="modal-content">
+	    		<div class="modal-header">
+	        		<button type="button" class="close" data-dismiss="modal">&times;</button>
+	         		<h4 class="modal-title">Sign Up</h4>
+	       		</div>
+	       		<div class="modal-body">
+	         		<div class="form-group">
+  						<label for="usr">User Name:</label>
+  						<input type="text" class="form-control" id="usr">
+					</div>
+					<div class="form-group">
+  						<label for="email">E-mail:</label>
+  						<input type="text" class="form-control" id="email">
+					</div>
+					<div class="form-group">
+  						<label for="phone">Phone:</label>
+  						<input type="text" class="form-control" id="phone">
+					</div>
+					<div class="form-group">
+  						<label for="pwd">Password:</label>
+  						<input type="password" class="form-control" id="pwd">
+					</div>
+					<div class="form-group">
+  						<label for="pwd2">Repeat Password:</label>
+  						<input type="password" class="form-control" id="pwd2">
+					</div>
+	       		</div>
+	       		<div class="modal-footer">
+	        		<button type="button" class="btn btn-default" data-dismiss="modal">Sign Up</button>
+	        		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	       		</div>
+	       	</div>
+		</div>
+	</div>
 </body>
 </html>
